add_executable(change change.c)
add_executable(sushu sushu.c)
add_executable(jiecheng jiecheng.c)
add_executable(pi pi.c)
add_executable(time time.c)
add_executable(ASCLL ASCLL.c)
add_executable(Inverse Inverse.c)
add_executable(Gravity Gravity.c)
add_executable(Julian Julian.c)
add_executable(Equation Equation.c)
