add_executable(B3631 B3631.c)
add_executable(B3619 B3619.c)
add_executable(B3620 B3620.c)
add_executable(B2142 B2142.c)

add_executable(1000 1000.c)
add_executable(1001 1001.c)
add_executable(1002 1002.c)
add_executable(1035 1035.c)
add_executable(5707 5707.c)
add_executable(3954 3954.c)
add_executable(1427 1427.c)
add_executable(1255 1255.c)
add_executable(1042 1042.c)
add_executable(2670 2670.c)
add_executable(1601 1601.c)
add_executable(5735 5735.c)
add_executable(5736 5736.c)
add_executable(5737 5737.c)
add_executable(5738 5738.c)
add_executable(5739 5739.c)
add_executable(5461 5461.c)
add_executable(5740 5740.c)
add_executable(5741 5741.c)
add_executable(5742 5742.c)
add_executable(1075 1075.c)
add_executable(1304 1304.c)
add_executable(1217 1217.c)
add_executable(2415 2415.c)
add_executable(5743 5743.c)
add_executable(5744 5744.c)
add_executable(1563 1563.c)
add_executable(1303 1303.c)
add_executable(1009 1009.c)
add_executable(2024 2024.c)
add_executable(3156 3156.c)
add_executable(3613 3613.c)
add_executable(1996 1996.c)
add_executable(4924 4924.c)
add_executable(1328 1328.c)
add_executable(1518 1518.c)
add_executable(1067 1067.c)
add_executable(1098 1098.c)
add_executable(1065 1065.c)
add_executable(1591 1591.c)
add_executable(1249 1249.c)
add_executable(1045 1045.c)
add_executable(1226 1226.c)
add_executable(1480 1480.c)
add_executable(2005 2005.c)
add_executable(2142 2142.c)
add_executable(1932 1932.c)
add_executable(1271 1271.c)
add_executable(1177 1177.c)
add_executable(1923 1923.c)
add_executable(1059 1059.c)
add_executable(1093 1093.c)
add_executable(1781 1781.c)
add_executable(2676 2676.c)
add_executable(1116 1116.c)
add_executable(1152 1152.c)
add_executable(1068 1068.c)
add_executable(5143 5143.c)
add_executable(1104 1104.c)
add_executable(1012 1012.c)
add_executable(5855 5855.c)
add_executable(2241 2241.c)
add_executable(2089 2089.c)
add_executable(1618 1618.c)
add_executable(1036 1036.c)
add_executable(1908 1908.c)
add_executable(1966 1966.c)
add_executable(1115 1115.c)
add_executable(1157 1157.c)
add_executable(1088 1088.c)
add_executable(1706 1706.c)
add_executable(1970 1970.c)
add_executable(1551 1551.c)
add_executable(8654 8654.c)
add_executable(1760 1760.c)
add_executable(3392 3392.c)
add_executable(3654 3654.c)
add_executable(1149 1149.c)
add_executable(3799 3799.c)
add_executable(2392 2392.c)
add_executable(1757 1757.c)
add_executable(2871 2871.c)
add_executable(1049 1049.c)
add_executable(1060 1060.c)
add_executable(1164 1164.c)
add_executable(1510 1510.c)
add_executable(2036 2036.c)
add_executable(1786 1786.c)
add_executable(3367 3367.c)
add_executable(1455 1455.c)
add_executable(1536 1536.c)
add_executable(3371 3371.c)
add_executable(3370 3370.c)
add_executable(3378 3378.c)
add_executable(3383 3383.c)
add_executable(2818 2818.c)
add_executable(4994 4994.c)
add_executable(1024 1024.c)
add_executable(2249 2249.c)
add_executable(2440 2440.c)
add_executable(2240 2240.c)
add_executable(1044 1044.c)
add_executable(1028 1028.c)
add_executable(1464 1464.c)
add_executable(1928 1928.c)
add_executable(2437 2437.c)
add_executable(3612 3612.c)
add_executable(1223 1223.c)
add_executable(1803 1803.c)
add_executable(1090 1090.c)
add_executable(3817 3817.c)
add_executable(1106 1106.c)
add_executable(1478 1478.c)
add_executable(5019 5019.c)
add_executable(1208 1208.c)
add_executable(1094 1094.c)
add_executable(4995 4995.c)
add_executable(4447 4447.c)
add_executable(1102 1102.c)
add_executable(1873 1873.c)